--- a/src/app/gallery/components/GalleryHeader.css
+++ b/src/app/gallery/components/GalleryHeader.css
@@ -1,11 +1,14 @@
 .galleryHeader{
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     color: white;
+    background: white ;
+    background-image: linear-gradient(to right top, #111111, #14131b, #141424, #13162e, #0f1838, #12214a, #132b5d, #113670, #1d4c92, #2863b5, #317bd9, #3894ff);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
+    animation: sizeInGallery 1s 0.6s forwards;
 }
 .galleryHeader-text{
     display: flex;
@@ -13,21 +16,56 @@
     align-items: center;
     justify-content: end;
     margin: 2rem;
-    width: 60%;
+    width:60%;
     height: 100%;
     text-align: center;
+
+  
     h1{
         width: 80%;
+        font-size: 6rem;
+        font-weight: 400;
+        color: transparent;
+        opacity: 0;
+        -webkit-text-stroke: 1px white;
+        animation: fadeIn  0.6s 0.8s forwards;
+
+    }
+    p{
+        width: 60%;
+        font-size: 1.7rem;
+        font-weight: 400;
+        opacity: 0;    
+        animation: fadeIn 0.4s 1s forwards;
     }
 }
 .galleryHeader-header {
+
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     width: 100%;
-    padding: 0 8rem;
-    height: 20vh;
-    background-color: var(--gray);
+    padding: 0.2rem 2rem;
+   color: var(--dark-gray);
+    height: auto;
+    background-color: var(--off-white);
     justify-content: center;
     align-items: center;
     text-align: center;
+    box-shadow:  10px 0 10px hsla(0, 0%, 0%, 0.5);
+    z-index: 4;
+    h3{
+        font-size: 1rem;
+    }
+    h2{
+        font-size: 0.6rem;
+        font-weight: 300;
+    }
 }
+@keyframes sizeInGallery{
+    0%{
+      height: 100vh;
+    }
+    100%{
+      height: 80vh;
+    }
+  }
