--- a/src/app/course/test/components/CourseHero.css
+++ b/src/app/course/test/components/CourseHero.css
@@ -7,7 +7,7 @@
   overflow: hidden;
   color: white;
   background: var(--off-white);
-  height: auto;
+  height:auto;
   
 
   h1 {
@@ -28,11 +28,14 @@
 }
 
 .course-hero-img {
-  height: 76vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
+
+  animation: sizeInCourse  1s 0.4s forwards;
   img {
     width: 100%;;
     object-fit: cover;
@@ -40,6 +43,7 @@
 }
 .course-hero-img::after {
   content: "";
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
@@ -47,7 +51,8 @@
 
   background: rgb(0, 0, 0, 0.4);
 
-  height: 80vh;
+  animation: sizeInCourse  1s 0.4s forwards;
+ 
 }
 
 .course-overlay {
@@ -62,6 +67,8 @@
   justify-content: center;
   align-items: center;
   top: 2rem;
+  opacity: 0;
+  animation: scaleIn  0.8s 0.1s forwards;
 }
 .course-header {
   position: absolute;
@@ -75,6 +82,8 @@
   backdrop-filter: blur(20px);
   width: 100%;
   z-index: 8;
+  opacity: 0;
+
   p{
     font-size: 0.5rem;
     margin: 0.1rem;
@@ -103,6 +112,10 @@
   z-index: 8;
   background: var(--off-white);
   padding: 1rem 0;
+  opacity: 0;
+
+  animation: opacityIn  0.8s 0.8s forwards;
+
 }
 .course-hero-buttom-mobile {
   display: none;
@@ -191,5 +204,13 @@
     display: flex;
     justify-content: start;
     
+  }
+}
+@keyframes sizeInCourse {
+  0%{
+    height: 100vh;
+  }
+  100%{
+    height: 76vh;
   }
 }
