--- a/src/app/home/Parts/Description.css
+++ b/src/app/home/Parts/Description.css
@@ -7,6 +7,8 @@
     justify-content: space-between;
     padding: 1rem;
     gap: 1rem;
+    opacity: 0;
+    animation: opacityIn  0.8s 1.4s forwards;
 }
 
 .description .panel {
