--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  animation: sizeIn 0.8s 0.8s forwards;
+  animation: sizeInHome 0.8s 0.8s forwards;
 
   h1{
       line-height: 1;
