--- a/src/app/components/Slider.css
+++ b/src/app/components/Slider.css
@@ -148,24 +148,27 @@ body {
   height: 50vh;
   font-size: 1.5rem;
   transition: transform 0.2s ease-in-out;
+  
   z-index: 2;
 }
 #left-prevSlide-button {
   left: 0;
-  background: linear-gradient(
-    to right,
+  background: radial-gradient(
+    circle at left,
     rgba(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0) 80%
+    rgba(0, 0, 0, 0) 50%
   );
 }
+
 #right-nextSlide-button {
   right: 0;
-  background: linear-gradient(
-    to left,
+  background: radial-gradient(
+    circle at right,
     rgba(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0) 80%
+    rgba(0, 0, 0, 0) 50%
   );
 }
+
 
 @media screen and (max-width: 1400px) {
   .sliderComponent {
