--- a/src/app/gallery/components/Gallery.css
+++ b/src/app/gallery/components/Gallery.css
@@ -8,7 +8,7 @@
     align-items: center;
     background-color: var(--off-white);
     color: white;
-    height: auto;
+    height: 120vh;
     justify-content: start;
 }
 
