--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -17,55 +17,46 @@
   position: relative; /* To position the overlay on top of the image */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-}
+} 
 .post-text-panel {
-  background-color: var(--gray);
+  background-color: var(--off-white);
   color: white;
   z-index: 2;
-  height: auto;
-  height: auto;
+  height: 40vh;
   width: 100%;
-  display: grid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  
 }
 .post-text {
   position: absolute;
+  color: black;
   bottom: 0;
   opacity: 0; /* Make it invisible */
   visibility: hidden; /* Ensure it is not interactable */
   transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
   font-size: 2rem;
   width: 100%;
+  height: 20vh;
   text-align: center;
   padding: 1rem;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   z-index: 2;
   h3{
     font-size: 1rem;
   }
 }
-.post-text::after{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: linear-gradient(
-    to top,
-    rgba(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0) 80%
-  );
-  pointer-events: none;
-  z-index: -1;
-}
+
 .post-text.visible {
   opacity: 1; /* Make it visible */
   visibility: visible; /* Ensure it becomes interactable */
+
 }
 .post-item::after {
   content: "";
@@ -91,7 +82,7 @@
 .post-overlay {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 800px;
   color: white;
   z-index: 2;
   display: flex;
@@ -137,7 +128,7 @@
   }
   .post-trans {
     background-color: white;
-    font-weight: 4e00;
+    font-weight: 400;
     color: var(--blue);
   }
 }
