--- a/src/app/gallery/components/Gallery.css
+++ b/src/app/gallery/components/Gallery.css
@@ -7,8 +7,8 @@
     flex-direction: column;
     align-items: center;
     background-color: var(--off-white);
-    color: white;
-    height: 120vh;
+    color: black;
+    height: auto;
     justify-content: start;
 }
 
