--- a/src/app/home/Parts/Description.css
+++ b/src/app/home/Parts/Description.css
@@ -49,10 +49,10 @@
         border-radius: 40px;
         justify-self: center;
         margin: 1rem;
-        width: 4rem;
+        width: auto;
         height: 1.6rem;
         padding: 0 20px;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         font-weight: 300;
         transition: 0.2s;
         
