--- a/src/app/gallery/components/Gallery.css
+++ b/src/app/gallery/components/Gallery.css
@@ -45,15 +45,17 @@
     z-index: 1; 
 }
 .gallery-text {
-    position: absolute;
+    height: 20vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    bottom: 2rem;
-
-    color: white;
-    text-align: center;
-    z-index: 2; /* Ensure text stays on top */
-    padding: 0 20px;
+    justify-content: center;
+    z-index: 2;
+    h2{
+        font-weight: 700;
+    }
+    p{
+        font-weight: 600;
+    }
 }
