--- a/src/app/gallery/components/Gallery.css
+++ b/src/app/gallery/components/Gallery.css
@@ -1,5 +1,6 @@
 .gallery {
     position: relative; /* Ensure positioning context */
+ 
 }
 
 .gallery-slider {
@@ -10,6 +11,7 @@
     color: black;
     height: auto;
     justify-content: start;
+    padding-bottom: 4rem;
 }
 
 .gallery-video {
@@ -56,6 +58,6 @@
         font-weight: 700;
     }
     p{
-        font-weight: 600;
+        font-weight: 400;
     }
 }
