--- a/src/app/components/Slider.css
+++ b/src/app/components/Slider.css
@@ -193,7 +193,6 @@ body {
   }
   .sliderComponent .slide {
     flex: 0 0 100%;
-    margin: 0;
-    margin-bottom: 10px;
+    margin: 10px 0;
   }
 }
