--- a/src/app/home/Parts/HomeSlider.css
+++ b/src/app/home/Parts/HomeSlider.css
@@ -1,8 +1,10 @@
 .homeSlider{
     width: 100%;
     height: 20vh;
+    padding-top: 2rem 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
+    text-align: center;
 }
