--- a/src/app/components/Slider.css
+++ b/src/app/components/Slider.css
@@ -22,7 +22,7 @@ body {
   overflow-x: auto;
   align-items: center;
   width: 100%;
-  height:   auto;
+  height: auto;
 
   gap: 0; /* No gaps between slides */
   object-fit: cover;
@@ -53,6 +53,7 @@ body {
   object-fit: cover;
   transition: opacity 0.5s ease;
   position: absolute;
+
   top: 0;
   left: 0;
 }
@@ -87,6 +88,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
+
   background: linear-gradient(
     to top,
     rgba(0, 0, 0, 0.8) 0%,
@@ -106,7 +108,7 @@ body {
   padding: 10px;
   text-align: center;
   z-index: 2;
-  
+
   h2 {
     font-size: 1rem;
     line-height: 1.3;
@@ -127,7 +129,6 @@ body {
     text-align: left;
     color: white;
     background-color: transparent;
-
   }
 }
 .play {
@@ -148,7 +149,7 @@ body {
   height: 50vh;
   font-size: 1.5rem;
   transition: transform 0.2s ease-in-out;
-  
+
   z-index: 2;
 }
 #left-prevSlide-button {
@@ -168,7 +169,6 @@ body {
     rgba(0, 0, 0, 0) 50%
   );
 }
-
 
 @media screen and (max-width: 1400px) {
   .sliderComponent {
@@ -195,4 +195,11 @@ body {
     flex: 0 0 100%;
     margin: 10px 0;
   }
+  /* .sliderComponent .slide::after {
+    padding: 0 10px;
+  }
+  .sliderComponent .slide img,
+  .sliderComponent .slide video {
+    padding: 0 10px;
+  }  */
 }
