--- a/src/app/home/Parts/HomeSlider.css
+++ b/src/app/home/Parts/HomeSlider.css
@@ -1,7 +1,7 @@
 .homeSlider{
     width: 100%;
-    height: 20vh;
-    padding-top: 2rem 0;
+    height: auto;
+    padding: 4rem 0 1rem 0;
     display: flex;
     flex-direction: column;
     justify-content: end;
