--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -42,7 +42,7 @@
   width: 100%;
   height: 20vh;
   text-align: center;
-  padding-bottom: 1rem;
+  padding: 1rem 0 2rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
