--- a/src/app/gallery/components/Gallery.css
+++ b/src/app/gallery/components/Gallery.css
@@ -13,7 +13,7 @@
     height: auto;
     justify-content: center;
     background: rgb(12,37,80);
-    background: radial-gradient(circle, rgba(12,37,80,1) 0%, rgba(32,58,117,1) 64%, rgba(44,120,195,1) 100%);
+    /* background: radial-gradient(circle, rgba(12,37,80,1) 0%, rgba(32,58,117,1) 64%, rgba(44,120,195,1) 100%); */
 }
 
 .gallery-cover {
@@ -63,14 +63,19 @@
     align-items: center;
     justify-content: center;
     z-index: 2;
-    padding:  2rem  1rem 1rem 1rem;
+    padding:  3rem  1rem 1rem 1rem;
+
+   
+    text-shadow: rgba(255,255,255,0.5) 0px 0px 50px;
     h2{
-        font-weight: 700;
+        font-weight: 600;
         font-size: 2rem;
-      
+    
     }
     p{
+        color: white;
         font-weight: 400;
         width: 80%;
+        font-size: 0.6rem;
     }
 }
