--- a/src/app/gallery/components/Gallery.css
+++ b/src/app/gallery/components/Gallery.css
@@ -9,11 +9,11 @@
     align-items: center;
 
     color: rgb(255, 255, 255);
-    background-color: var(--dark-gray);
     height: auto;
     justify-content: center;
-    background: rgb(12,37,80);
-    /* background: radial-gradient(circle, rgba(12,37,80,1) 0%, rgba(32,58,117,1) 64%, rgba(44,120,195,1) 100%); */
+    background-color: var(--off-white);
+    padding-bottom: 2rem;
+
 }
 
 .gallery-cover {
@@ -56,7 +56,7 @@
     height: auto;
     min-height: 20vh;
     width: 100%;
-    max-width: 1200px;
+
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -64,18 +64,20 @@
     justify-content: center;
     z-index: 2;
     padding:  3rem  1rem 1rem 1rem;
+    background-color: var(--dark-gray);
 
    
     text-shadow: rgba(255,255,255,0.5) 0px 0px 50px;
     h2{
         font-weight: 600;
         font-size: 2rem;
-    
+        max-width: 1200px;
     }
     p{
         color: white;
         font-weight: 400;
         width: 80%;
         font-size: 0.6rem;
+        max-width: 1200px;
     }
 }
