--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -7,6 +7,8 @@
   align-items: center;
   overflow: hidden;
   animation: sizeInHome 0.8s 0.8s forwards;
+  box-shadow: 1rem 1rem  1rem 1rem  hsla(0, 0%, 0%, 1);
+  z-index: 2;
 
   h1{
       line-height: 1;
@@ -124,6 +126,9 @@
   }
   a:hover {
     background-color: var(--dark-blue);
+  }
+  h1{
+    font-weight: 600;
   }
 }
 .slide-description {
