--- a/src/app/course/[CourseId]/components/CourseContent.css
+++ b/src/app/course/[CourseId]/components/CourseContent.css
@@ -47,6 +47,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+   
     
 
     h5{
@@ -56,25 +57,33 @@
         color: var(--gray);
     }
     ul{
-        text-align: left;
         list-style: none;
         width: 80%;
         display: grid;
         grid-template-columns: 50% 50%;
+        justify-content: center;
+       
+        text-align: left;
+       
         
     }
     ul li:nth-child(odd):last-child {
         grid-column: span 2; /* Make the last odd item span both columns */
-        width: 90%;
+        width: 100%;
+        padding: 0 4rem;
         display: flex;
         flex-direction: column;
+        align-items: center;
         justify-content: center;
+        text-align: center;
        
-        text-align: center; /* Center-align the text (optional) */
+     
     }
     li{
-        margin: 1rem 0;
-        width: 80%
+
+        padding: 1rem;
+        width: 100%;
+     
 
     }
 
