--- a/src/app/course/[CourseId]/components/CourseGet.css
+++ b/src/app/course/[CourseId]/components/CourseGet.css
@@ -12,8 +12,8 @@
   padding: 2rem 0;
 
   video, img {
-    width: 50%;
-
+    width: 80%;
+    max-width: 1000px;
     height: auto;
     aspect-ratio: 1/1;
     object-fit: cover;
