--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -91,16 +91,20 @@
   align-items: center;
   padding: 2rem;
   text-align: center;
+
+  
   h1 {
-    font-size: 48px;
-    line-height: 1.3;
+    font-size: 1.5rem;
+    line-height: 1.8;
     font-weight: 600;
+
   }
   p {
-    font-size: 24px;
-    line-height: 1;
+    max-width: 800px;
+    font-size: 0.6rem;
+    line-height: 1.3;
     font-weight: 400;
-    letter-spacing: -0.02em;
+  
   }
 }
 .post-links {
