--- a/src/app/course/[id]/components/CourseOutline.css
+++ b/src/app/course/[id]/components/CourseOutline.css
@@ -1,4 +1,3 @@
-
 .course-timeline {
   width: 100%;
   display: flex;
@@ -10,7 +9,6 @@
   background: transparent;
   height: auto;
   padding-bottom: 2rem;
-
 }
 .course-timeline::after {
   background: linear-gradient(
@@ -24,7 +22,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  content: "";  
+  content: "";
   z-index: 4;
   display: none;
 }
@@ -34,46 +32,50 @@
   text-align: left;
   width: 80%;
   padding: 1rem 0;
+  h1 {
+    font-size: 1.5rem;
+  }
 }
 
 .timeline {
   width: 40%;
- 
+
   position: relative;
   height: auto;
   transition: width 0.3s ease, padding 0.3s ease, height 0.3s ease;
-  h5{
-   
+  h5 {
     color: var(--gray);
   }
-  h3{
+  h3 {
     color: var(--dark-gray);
   }
 }
-
 
 .timeline ul {
   list-style-type: disc;
   padding-left: 1.5rem;
   transition: padding-left 0.3s ease;
   list-style: none;
+  li{
+    padding: 0.5rem;
+  }
 }
 
 .timeline.left {
   align-self: flex-start;
   margin-left: 10%;
-  padding-left: 10%;
-  padding: 0 2rem  2rem  2rem ;
-
+  padding-right: 1rem;
+  /* padding: 0 2rem 2rem 2rem; */
 }
 
 .timeline.right {
+  width: 50%;
   align-self: flex-end;
-  margin-right: 10%;
-  padding-left: 10%;
-  padding: 0 2rem  2rem  2rem ;
-
+  padding-left: 2rem;
+  align-self: left;
+  /* padding: 0 2rem 2rem 2rem; */
 }
+
 
 .line {
   position: fixed;
@@ -108,10 +110,10 @@
 .checkbox-label {
   display: inline-block;
   height: 1.5rem;
-    width: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   background-color: var(--blue);
   color: white;
@@ -119,20 +121,20 @@
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
-#up{
+#up {
   display: none;
 }
 .checkbox-label:hover {
   background-color: var(--blue);
   transform: scale(1.05);
 }
-.outline-img{
+.outline-img {
   width: 100vw;
   height: 60vh;
   object-fit: cover;
 }
 @media screen and (max-width: 600px) {
-  .course-timeline::after{
+  .course-timeline::after {
     display: block;
   }
   .button-container {
@@ -153,34 +155,33 @@
     width: 100%;
     padding: 01rem;
   }
-  
+
   .timeline.left,
   .timeline.right {
     align-self: center;
     margin: 0;
-    
+
     height: auto;
     width: 100%;
   }
 
   .timeline.left ul,
   .timeline.right ul {
-  
     padding-left: 1rem;
   }
 
   #timeline-checkbox:checked ~ .course-timeline {
     height: 100%;
-  
+
     overflow: visible;
-    #up{
+    #up {
       display: block;
     }
-    #down{
+    #down {
       display: none;
     }
   }
   #timeline-checkbox:checked ~ .course-timeline::after {
     display: none;
-}
+  }
 }
