--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -35,8 +35,8 @@
   position: absolute;
   color: black;
   bottom: 0;
-  opacity: 0; /* Make it invisible */
-  visibility: hidden; /* Ensure it is not interactable */
+  opacity: 0;
+  visibility: hidden; 
   transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
   font-size: 2rem;
   width: 100%;
@@ -82,17 +82,16 @@
 .post-overlay {
   position: absolute;
   width: 100%;
-  height: 800px;
+  height: 100%;
   color: white;
   z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem 1rem 3rem 1rem;
   text-align: center;
 
-  
   h1 {
     font-size: 1.5rem;
     line-height: 1.8;
