--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -11,7 +11,7 @@
   position: relative;
 }
 
-.post-item {
+.post-item, .post-img  {
   width: 100%; /* Ensure each item takes up full width of the parent */
   margin-bottom: 8px; /* Add space between items */
   position: relative; /* To position the overlay on top of the image */
@@ -67,7 +67,7 @@
   bottom: 0;
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.9) 0%,
+    rgba(0, 0, 0, 0.7) 0%,
     rgba(0, 0, 0, 0) 50%
   );
   pointer-events: none;
@@ -89,8 +89,10 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  padding: 1rem 1rem 3rem 1rem;
+  padding: 1rem;
   text-align: center;
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,0.4) 0%, rgba(122,122,122,0) 50%);
 
   h1 {
     font-size: 1.5rem;
@@ -99,7 +101,7 @@
 
   }
   p {
-    max-width: 800px;
+    max-width: 40%;
     font-size: 0.6rem;
     line-height: 1.3;
     font-weight: 400;
