--- a/src/app/home/Parts/Post.css
+++ b/src/app/home/Parts/Post.css
@@ -101,7 +101,8 @@
 
   }
   p {
-    max-width: 40%;
+    width: 80%;
+    max-width: 400px;
     font-size: 0.6rem;
     line-height: 1.3;
     font-weight: 400;
