--- a/src/app/home/Parts/MainSlider.css
+++ b/src/app/home/Parts/MainSlider.css
@@ -87,8 +87,8 @@
   bottom: 0;
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 0.2) 50%
+    rgba(0, 0, 0, 0.8) 0%,
+    rgba(0, 0, 0, 0.2) 30%
   );
   pointer-events: none;
 }
@@ -103,7 +103,8 @@
   z-index: 2;
   text-shadow: rgba(0, 0, 0, 0.5);
   width: 80%;
-
+  opacity: 0;
+  animation: scaleIn  0.8s 1s forwards;
 
   a {
     display: flex;
@@ -200,6 +201,6 @@
     height: 100vh;
   }
   100%{
-    height: 100vh;
+    height: 90vh;
   }
 }
